--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit>=1.30.0
-gensim>=4.3.1
-pandas>=1.5.3
-numpy>=1.24
-scikit-learn>=1.3.0
-matplotlib>=3.7.1
-seaborn>=0.12.2
+streamlit
+pyspark
+gensim
+wordcloud
+plotly
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
