--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 pyspark
-gensim
+gensim==4.3.2
 wordcloud
 plotly
 pandas
@@ -8,3 +8,5 @@ numpy
 scikit-learn
 matplotlib
 seaborn
+smart_open==7.0.5
+Cython
