--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-findspark
 streamlit
-gensim==4.2.0
+findspark
 pyspark==3.5.1
-wordcloud
-plotly
-pandas
+gensim==4.2.0
 numpy
+pandas
 scikit-learn
 matplotlib
 seaborn
+plotly
+wordcloud
 smart_open==7.0.5
-scipy==1.11.1
-pyspark
 joblib
-pickle5
 java-bootstrap
+Cython
+scipy==1.11.1
